<?xml version="1.0"?>
<package format="2">
    <name>convert</name>
    <version>0.3.3</version>
    <description>convert</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>BSD-3_Clause</license>
    <url type="repository">https://github.com/willat343/convert</url>
    <author email="william.talbot97@gmail.com">William Talbot</author>

    <buildtool_depend>cmake</buildtool_depend>

    <!-- Optional Dependencies -->
    <exec_depend>eigen</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>gtsam</exec_depend>
    <exec_depend>manif</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensorbox</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
